feat: DATA-1380 Integration of GTFS-RT 2.0 feed